--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "crons": [{
     "path": "/api/cron-rss",
-    "schedule": "0 */6 * * *"
-  }]
+    "schedule": "0 8 * * *"
+  }],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
